:bug:   scrollbar bug fixed

--- a/assets/css/snake.css
+++ b/assets/css/snake.css
@@ -7,7 +7,6 @@
 html, body {
     margin                  : 0;
     padding                 : 0;
-    height                  : 100%;
     font-size               : 17px;
     color                   : #001000;
     background              : #c6cbb4;
@@ -120,7 +119,6 @@ footer{
     background              : rgb(31, 31, 31);
     color                   : white;
     padding                 : 1px 0 1px 0; 
-    margin-top: 10%; 
     position                : fixed;
     bottom                  : 0;
     width                   : 100%;
